<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="abuse">Abuse</string>
    <string name="accept">Accept</string>
    <string name="accept_check">I am aware of the above statement and I wish to trade high risk investment products</string>
    <string name="account">Account</string>
    <string name="account_auto_fill">Fill in automatically</string>
    <string name="account_info">Account information</string>
    <string name="account_info_was_copied">Account info was copied to clipboard</string>
    <string name="account_list_brokers_count">There are %1$d servers available</string>
    <string name="account_list_brokers_disclaimer_text">"The application may feature brokerage companies which may not be regulated in your country. Exercise caution and responsibility before opening an account with any brokerage company.

Contact details are provided for each company. Use them to further research their regulatory status and services. MetaQuotes may not possess complete and updated information about the regulation status of brokerage companies in particular countries and does not guarantee their reliability or reputation."</string>
    <string name="account_list_brokers_loading">Updating server list, %1$d%% complete</string>
    <string name="account_list_use_search">Use search to find a broker</string>
    <string name="account_type">Account type:</string>
    <string name="accounts_title">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="add_symbol">Add symbol</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_trading_account">Add Trading Account</string>
    <string name="advert">Advertisement</string>
    <string name="all">All</string>
    <string name="all_symbols">All symbols</string>
    <string name="all_symbols_added">All available symbols are already added to Quotes</string>
    <string name="alloc_demo_disabled">Demo allocation disabled</string>
    <string name="allocating_account">Allocating demo account</string>
    <string name="allocating_demo_failed_open">Failed to open a demo account automatically. Enter your broker name and try again manually.</string>
    <string name="allocation_terminated">Action canceled by user</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name_with_version">MQL5 Channels %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Appearance</string>
    <string name="apply_close">Close</string>
    <string name="apply_first_indicator">"First Indicator's Data"</string>
    <string name="apply_high">High</string>
    <string name="apply_low">Low</string>
    <string name="apply_median_price">Median Price (HL/2)</string>
    <string name="apply_open">Open</string>
    <string name="apply_prev_indicator">"Previous Indicator's Data"</string>
    <string name="apply_to">Apply to</string>
    <string name="apply_typical_price">Typical Price (HLC/3)</string>
    <string name="apply_weighted_close">Weighted Close (HLCC/4)</string>
    <string name="ask_brocker_for_support">Ask your broker to contact MetaQuotes Ltd and we will add this company into the list shortly.</string>
    <string name="ask_line">Ask price line</string>
    <string name="audio">Audio</string>
    <string name="auth_ban">Authorization failed: banned</string>
    <string name="auth_failed">Authorization failed</string>
    <string name="auth_invalid_password">Authorization failed: invalid password</string>
    <string name="authorized_in">Authorized broker: %1$s</string>
    <string name="auto_demo_account_desc">An anonymous account will be automatically created for you</string>
    <string name="auto_demo_account_title">Start without registration</string>
    <string name="auto_demo_wait_desc">Servers are still loading, an account will be automatically created after completion</string>
    <string name="balance">Balance:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="broker_info">Broker Information</string>
    <string name="broker_info_abuse_email">Abuse Reporting Email</string>
    <string name="broker_info_company">Company</string>
    <string name="broker_info_generic_email">Generic Email</string>
    <string name="broker_info_mq_not_broker">MetaQuotes is a software development company that only provides demo accounts for testing purposes.</string>
    <string name="broker_info_need_account_for_report">To report a problem to the broker, you need to have a trading account with it</string>
    <string name="broker_info_office_addr">Offices Location</string>
    <string name="broker_info_phone">Phone</string>
    <string name="broker_info_reg_addr">Registration Address</string>
    <string name="broker_info_reg_number">Registration Number</string>
    <string name="broker_info_report">Report a problem to the broker</string>
    <string name="broker_info_website">Website</string>
    <string name="button_done">Done</string>
    <string name="buy">Buy</string>
    <string name="buy_by_market">Buy by market</string>
    <string name="by_market">by market</string>
    <string name="calc_mode">Profit calculation mode:</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_allocation_job">Canceling request to server</string>
    <string name="cant_alloc_demo">Can`t allocate demo account. Server unreachable.</string>
    <string name="cant_find_brocker">Can’t find your broker?</string>
    <string name="categories">Categories</string>
    <string name="category_broker">Broker</string>
    <string name="category_chat">Chat</string>
    <string name="category_hosting">Hosting Service</string>
    <string name="category_mql5">Community</string>
    <string name="category_other">Other</string>
    <string name="category_terminal">Terminal</string>
    <string name="certificate_password_empty">Password is not specified</string>
    <string name="change_investor_password">Change investor password</string>
    <string name="change_master_password">Change master password</string>
    <string name="change_password">Change password</string>
    <string name="change_password_fail">"Failed to change password for '%d'"</string>
    <string name="change_password_success">"Password for '%d' has been changed"</string>
    <string name="channel_name">Channel Name</string>
    <string name="channels_app_name">MQL5 Channels</string>
    <string name="channels_open_chat_properties_screen_button">Open chat properties screen button</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="chat_channels">Channels</string>
    <string name="chat_chats">Chats</string>
    <string name="chat_groups">Groups</string>
    <string name="chat_search">Search</string>
    <string name="empty_messages_filter">Nothing found</string>
    <string name="empty_messages_list">No messages</string>
    <string name="login_with_existing_account_desc">Use your login/password to connect to the broker of your choice</string>
    <string name="login_with_existing_account_title">Login to an existing account</string>
    <string name="ok">OK</string>
    <string name="old_client">Unfortunately, your application is not supported. Please update it to the latest version or contact the broker.</string>
    <string name="open_demo_account_desc">Choose a broker and register an account to learn trading and test your strategies</string>
    <string name="open_demo_account_title">Open a demo account</string>
    <string name="open_real_account_info">To open a real account, please contact your broker</string>
    <string name="otp_account_bind">Bind to account</string>
    <string name="otp_change_password">Change password</string>
    <string name="otp_hint">"Enter this code when logging
 in to the bound trading accounts"</string>
    <string name="otp_sync_time">Synchronize time</string>
    <string name="register">Register</string>
    <string name="risk_text">"We wish to inform you that by using this trading platform further you will have access to leveraged high risk investment products, provided by the financial institution of your choice. Investing in such products might not be suitable for all investors, because it carries a risk of losing a part or all deposited amount.

Before deciding to trade high risk investment products you should carefully consider your investment objectives, level of experience and acceptable risk. The possibility exists that you could sustain a loss higher than your initial investment and therefore you should not invest money that you cannot afford to lose.

 We invite you to widen your knowledge about all the risk factors that are concerned with investing in these products, and seek advice from a professional financial advisor if you have any doubts."</string>
    <string name="risk_warning">High Risk Investment Warning</string>
    <string name="sign_in">Sign In</string>
    <string name="update_app">Update application</string>
</resources>