<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/title" android:background="@color/dialog_title" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/tabbar_selected" android:gravity="center" android:id="@id/back_button" android:background="?android:selectableItemBackground" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:layout_width="wrap_content" android:layout_height="65.0dip" android:text="@string/risk_warning" android:drawablePadding="8.0dip" style="@style/DialogWindowTitle" />
        <View android:background="@color/tabbar_selected" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
            <net.metaquotes.common.ui.RobotoTextView android:textSize="14.0sp" android:textColor="@color/logs_text_color" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/risk_text" />
        </ScrollView>
    </LinearLayout>
    <View android:background="@color/color_list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/accept_check" android:background="@color/drawer_background_normal" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
        <CheckBox android:id="@id/check" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <net.metaquotes.common.ui.RobotoTextView android:textColor="@color/control_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/accept_check" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/nav_bar" android:background="@drawable/gray_footer" android:paddingTop="1.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <net.metaquotes.common.ui.RobotoButton android:textSize="16.0sp" android:textStyle="bold" android:textColor="@drawable/button_text" android:id="@id/button_cancel" android:background="@drawable/book_trade_button" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:id="@id/button_sep" android:background="@color/panel_separator" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="10.5dip" android:layout_marginBottom="10.5dip" />
        <net.metaquotes.common.ui.RobotoButton android:enabled="false" android:textSize="16.0sp" android:textStyle="bold" android:textColor="@drawable/button_text" android:id="@id/button_ok" android:background="@drawable/book_trade_button" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>