<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <net.metaquotes.common.ui.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout android:orientation="vertical" android:id="@id/open_demo_account" android:background="?android:selectableItemBackground" android:paddingLeft="15.0dip" android:paddingTop="14.0dip" android:paddingRight="15.0dip" android:paddingBottom="21.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <net.metaquotes.common.ui.RobotoTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/messages_text_color" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_demo_account_title" android:textAllCaps="true" />
            <net.metaquotes.common.ui.RobotoTextView android:textSize="14.0sp" android:textColor="@color/gray_31" android:id="@id/open_demo_account_desc" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_demo_account_desc" />
        </LinearLayout>
        <View android:id="@id/divider" android:background="@color/color_list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="16.0dip" android:layout_alignParentBottom="true" />
        <LinearLayout android:orientation="vertical" android:id="@id/login_exist_account" android:background="?android:selectableItemBackground" android:paddingLeft="15.0dip" android:paddingTop="14.0dip" android:paddingRight="15.0dip" android:paddingBottom="21.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <net.metaquotes.common.ui.RobotoTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/messages_text_color" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_with_existing_account_title" android:textAllCaps="true" />
            <net.metaquotes.common.ui.RobotoTextView android:textSize="14.0sp" android:textColor="@color/gray_31" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_with_existing_account_desc" />
        </LinearLayout>
        <View android:background="@color/color_list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="62.0dip">
            <ImageView android:layout_gravity="center_vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:src="@drawable/ic_account_info" />
            <net.metaquotes.common.ui.RobotoTextView android:textSize="13.0sp" android:textColor="@color/messages_text_color" android:layout_gravity="center_vertical" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_real_account_info" />
        </LinearLayout>
        <ImageView android:id="@id/logo" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0dip" android:src="@drawable/ic_logo_small_version" android:scaleType="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>