<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/dialogs_search" android:background="?channelsColorBackground" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="2.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/edit_search_container" android:background="@drawable/chat_dialogs_search_edit_text_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip" android:layout_alignParentTop="true" android:layout_marginHorizontal="24.0dip">
        <EditText android:textSize="16.0sp" android:textColorHint="@drawable/edit_text_hint_selector" android:ellipsize="start" android:id="@id/edit_search" android:background="@null" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:hint="@string/chat_search" android:singleLine="true" android:textAlignment="viewStart" android:paddingHorizontal="8.0dip" />
        <ImageView android:id="@id/search_close" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_search_close" android:layout_centerVertical="true" android:layout_marginEnd="8.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <com.google.android.material.tabs.TabLayout android:id="@id/tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/edit_search_container" app:tabBackground="?channelsColorBackground" app:tabIndicatorColor="@color/dialogs_search_tab_selected_text_color" app:tabSelectedTextColor="@color/dialogs_search_tab_selected_text_color" app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">
        <com.google.android.material.tabs.TabItem android:id="@id/tab_channel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chat_channels" />
        <com.google.android.material.tabs.TabItem android:id="@id/tab_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chat_groups" />
        <com.google.android.material.tabs.TabItem android:id="@id/tab_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chat_chats" />
    </com.google.android.material.tabs.TabLayout>
    <View android:id="@id/separator" android:background="?channelsColorBorder" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/tabs" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_search" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tabs" android:overScrollMode="never" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    <ProgressBar android:layout_gravity="center" android:id="@id/search_loader" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginBottom="50.0dip" android:layout_alignTop="@id/separator" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_search_stub" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:layout_alignTop="@id/separator" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_background_messages" android:tint="@color/gray_10" />
        <TextView android:textSize="14.0sp" android:textColor="@color/trade_hint" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/empty_messages_filter" />
    </LinearLayout>
</RelativeLayout>