<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <net.metaquotes.common.ui.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <RelativeLayout android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
                <net.metaquotes.metatrader4.ui.widgets.OTPCounter android:layout_gravity="center_horizontal" android:id="@id/otp_widget" android:layout_width="184.0dip" android:layout_height="184.0dip" />
                <net.metaquotes.common.ui.RobotoTextView android:textSize="16.0dip" android:textStyle="normal" android:gravity="center_horizontal" android:layout_gravity="center" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otp_hint" android:lines="2" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="184.0dip">
            <LinearLayout android:orientation="horizontal" android:id="@id/otp_bind_account" android:layout_width="fill_parent" android:layout_height="56.0dip">
                <ImageView android:layout_gravity="center_vertical" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_otp_bind" />
                <net.metaquotes.common.ui.RobotoTextView android:textSize="16.0dip" android:textColor="@color/trade_blue" android:layout_gravity="center_vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otp_account_bind" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/otp_change_password" android:layout_width="fill_parent" android:layout_height="56.0dip">
                <ImageView android:layout_gravity="center_vertical" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_otp_change_password" />
                <net.metaquotes.common.ui.RobotoTextView android:textSize="16.0dip" android:textColor="@color/trade_blue" android:layout_gravity="center_vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otp_change_password" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/otp_sync_time" android:layout_width="fill_parent" android:layout_height="56.0dip">
                <ImageView android:layout_gravity="center_vertical" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_otp_sync_time" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <net.metaquotes.common.ui.RobotoTextView android:textSize="16.0dip" android:textColor="@color/trade_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otp_sync_time" />
                    <net.metaquotes.common.ui.RobotoTextView android:textSize="14.0dip" android:textColor="@color/otp_synctime_hint" android:id="@id/otp_sync_last" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>