<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ViewStub android:id="@id/toolbar_stub" android:layout="@layout/toolbar_layout_channels" android:inflatedId="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Barrier android:id="@id/toolbar_barrier" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="toolbar_stub, toolbar" />
    <include android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar_barrier" layout="@layout/block_dialogs_search" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:overScrollMode="never" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toTopOf="@id/bottom_panel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar_barrier" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_list_stub" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_centerInParent="true" app:layout_constraintBottom_toTopOf="@id/bottom_panel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_background_messages" android:tint="?channelsColorBorder" />
        <TextView android:textSize="14.0sp" android:textColor="@color/trade_hint" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/empty_messages_list" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/bottom_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/old_client_banner" android:background="@drawable/gray_footer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="56.0dip">
            <TextView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/old_client" />
            <com.google.android.material.card.MaterialCardView android:gravity="center" android:id="@id/update_application" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" style="@style/MaterialChatButton">
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/text_color_default" android:gravity="center" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_app" android:textAllCaps="true" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:id="@id/register_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="6.0dip" android:weightSum="1.0">
            <Button android:gravity="center" android:id="@id/register_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/register" android:layout_weight="1.0" style="@style/ChatRegisterButton" />
            <Space android:layout_width="6.0dip" android:layout_height="wrap_content" />
            <Button android:gravity="center" android:id="@id/login_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_in" android:layout_weight="0.0" style="@style/ChatSignInButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/logout" android:background="@drawable/gray_footer" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ChatDialogButton">
            <ImageView android:layout_gravity="center|left" android:id="@id/user_icon" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/messages_unread_background" />
            <View android:layout_width="8.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="14.0sp" android:textColor="@color/text_color_default" android:gravity="center" android:layout_gravity="center" android:id="@id/user_name" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawablePadding="8.0dip" style="@style/ChatDialogButton" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:id="@id/loader" android:visibility="gone" android:layout_width="@dimen/chat_dialogs_loader_size" android:layout_height="@dimen/chat_dialogs_loader_size" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>